GCP-421 and GCP-427 Refactor Middleware/GermplasmBrowser/Workbench: - find functions to "get" - Return value of count methods from int or Long to long - start and numOfRows parameters from long or Integer to int - Standard unit tests output format - Standard unit tests parameter setup at the beginning of method - QueryException to MiddlewareQueryException - Standard MiddlewareQueryException message format - Addition of MiddlewareQueryExceptions to DAO methods - Addition of toString() method in some POJOs - Update of fields of some POJOs to match the table fields
git-svn-id: https://efficio.atlassian.net/svn/GCP/trunk/IBPMiddleware@990 4ebb2e00-0138-4608-bc6e-edf3948d4863