@@ -41,91 +41,101 @@ public class TestGermplasmListManagerImpl{
 
     @Test
     public void testGetGermplasmListById() throws Exception {
-        GermplasmList list = manager.getGermplasmListById(new Integer(1));
-        System.out.println(list);
+        Integer id = Integer.valueOf(1);
+        GermplasmList list = manager.getGermplasmListById(id);
+        System.out.println("testGetGermplasmListById(" + id + ") RESULTS:" + list);
     }
 
     @Test
     public void testGetAllGermplasmLists() throws Exception {
         List<GermplasmList> lists = manager.getAllGermplasmLists(0, 5, Database.CENTRAL);
-
-        System.out.println("RESULTS:");
+        System.out.println("testGetAllGermplasmLists RESULTS: ");
         for (GermplasmList list : lists) {
-            System.out.println(list);
+            System.out.println("  " + list);
         }
     }
 
     @Test
     public void testCountAllGermplasmLists() throws Exception {
-        System.out.println(manager.countAllGermplasmLists());
+        System.out.println("testCountAllGermplasmLists() RESULTS: " + manager.countAllGermplasmLists());
     }
 
     @Test
-    public void testFindGermplasmListByName() throws Exception {
-        List<GermplasmList> lists = manager.findGermplasmListByName("2002%", 0, 5, Operation.LIKE, Database.CENTRAL);
-
-        System.out.println("RESULTS:");
+    public void testGetGermplasmListByName() throws Exception {
+        String name = "2002%";
+        List<GermplasmList> lists = manager.getGermplasmListByName(name, 0, 5, Operation.LIKE, Database.CENTRAL);
+        System.out.println("testGetGermplasmListByName(" + name + ") RESULTS:");
         for (GermplasmList list : lists) {
-            System.out.println(list);
+            System.out.println("  " + list);
         }
     }
 
     @Test
     public void testCountGermplasmListByName() throws Exception {
-        System.out.println(manager.countGermplasmListByName("2002%", Operation.LIKE));
+        String name = "2002%";
+        System.out.println("testCountGermplasmListByName(" + name + ") RESULTS: " + manager.countGermplasmListByName(name, Operation.LIKE));
     }
 
     @Test
-    public void testFindGermplasmListByStatus() throws Exception {
-        List<GermplasmList> lists = manager.findGermplasmListByStatus(new Integer(1), 0, 5, Database.CENTRAL);
+    public void testGetGermplasmListByStatus() throws Exception {
+        Integer status = Integer.valueOf(1);
+        List<GermplasmList> lists = manager.getGermplasmListByStatus(status, 0, 5, Database.CENTRAL);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetGermplasmListByStatus(status=" + status + ") RESULTS: ");
         for (GermplasmList list : lists) {
-            System.out.println(list);
+            System.out.println("  " + list);
         }
     }
 
     @Test
     public void testCountGermplasmListByStatus() throws Exception {
-        System.out.println(manager.countGermplasmListByStatus(new Integer(1)));
+        Integer status = Integer.valueOf(1);
+        System.out.println("testCountGermplasmListByStatus(status=" + status + ") RESULTS: " + manager.countGermplasmListByStatus(status));
     }
 
     @Test
     public void testGetGermplasmListDataByListId() throws Exception {
-        List<GermplasmListData> results = manager.getGermplasmListDataByListId(new Integer(1), 0, 5);
+        Integer listId = Integer.valueOf(1);
+        List<GermplasmListData> results = manager.getGermplasmListDataByListId(listId, 0, 5);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetGermplasmListDataByListId(" + listId + ") RESULTS: ");
         for (GermplasmListData data : results) {
-            System.out.println(data);
+            System.out.println("  " + data);
         }
     }
 
     @Test
     public void testCountGermplasmListDataByListId() throws Exception {
-        System.out.println(manager.countGermplasmListDataByListId(new Integer(1)));
+        Integer listId = Integer.valueOf(1);
+        System.out.println("testCountGermplasmListDataByListId(" + listId + ") RESULTS: " + manager.countGermplasmListDataByListId(listId));
     }
 
     @Test
     public void testGetGermplasmListDataByListIdAndGID() throws Exception {
-        List<GermplasmListData> results = manager.getGermplasmListDataByListIdAndGID(new Integer(1), new Integer(91959));
+        Integer listId = Integer.valueOf(1);
+        Integer gid = Integer.valueOf(91959);
+        List<GermplasmListData> results = manager.getGermplasmListDataByListIdAndGID(listId, gid);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetGermplasmListDataByListIdAndGID(" + listId + ", " + gid + ") RESULTS: ");
         for (GermplasmListData data : results) {
-            System.out.println(data);
+            System.out.println("  " + data);
         }
     }
 
     @Test
     public void testGetGermplasmListDataByListIdAndEntryId() throws Exception {
-        GermplasmListData data = manager.getGermplasmListDataByListIdAndEntryId(new Integer(1), new Integer(1));
-        System.out.println(data);
+        Integer listId = Integer.valueOf(1);
+        Integer entryId = Integer.valueOf(1);
+        GermplasmListData data = manager.getGermplasmListDataByListIdAndEntryId(listId, entryId);
+        System.out.println("testGetGermplasmListDataByListIdAndEntryId(" + listId + ", " + entryId + ") RESULTS: " + data);
     }
 
     @Test
     public void testGetGermplasmListDataByGID() throws Exception {
-        List<GermplasmListData> results = manager.getGermplasmListDataByGID(new Integer(91959), 0, 5);
+        Integer gid = Integer.valueOf(91959);
+        List<GermplasmListData> results = manager.getGermplasmListDataByGID(gid, 0, 5);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetGermplasmListDataByGID(" + gid + ") RESULTS:");
         for (GermplasmListData data : results) {
             System.out.println(data);
         }
@@ -133,247 +143,216 @@ public class TestGermplasmListManagerImpl{
 
     @Test
     public void testCountGermplasmListDataByGID() throws Exception {
-        System.out.println(manager.countGermplasmListDataByGID(new Integer(91959)));
+        Integer gid = Integer.valueOf(91959);
+        System.out.println("testCountGermplasmListDataByGID(" + gid + ") RESULTS: " + manager.countGermplasmListDataByGID(gid));
     }
 
     @Test
     public void testAddGermplasmList() throws Exception {
-        System.out.println("********** testAddGermplasmList() **********");
-        try {
-            System.out.println("Inserting new Germplasm List Test #1: Complete details with ID");
-            GermplasmList germplasmList = new GermplasmList(null, "Test List #1", new Long(20120305), "LST", new Integer(1),
-                    "Test List #1 for GCP-92", null, 1);
-            System.out.println(germplasmList);
-            System.out.println("addGermplasmList(): " + manager.addGermplasmList(germplasmList));
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        System.out.println("********** testAddGermplasmList() done **********");
+        GermplasmList germplasmList = new GermplasmList(null, "Test List #1", new Long(20120305), "LST", new Integer(1),
+                "Test List #1 for GCP-92", null, 1);
+        Integer id = manager.addGermplasmList(germplasmList);
+        System.out.println("testAddGermplasmList(germplasmList=" + germplasmList + ") RESULTS: \n  " + manager.getGermplasmListById(id));
+        
+        // No need to clean up, will need the record in subsequent tests
     }
 
     @Test
     public void testAddGermplasmLists() throws Exception {
-        System.out.println("********** testAddGermplasmList(List<GermplasmList>) **********");
-        try {
-            List<GermplasmList> germplasmLists = new ArrayList<GermplasmList>();
-            System.out.println("Inserting new Germplasm List Test #2: Complete details with ID");
-            GermplasmList germplasmList = new GermplasmList(null, "Test List #2", new Long(20120305), "LST", new Integer(1),
-                    "Test List #2 for GCP-92", null, 1);
-            System.out.println(germplasmList);
-            germplasmLists.add(germplasmList);
+        List<GermplasmList> germplasmLists = new ArrayList<GermplasmList>();
+        GermplasmList germplasmList = new GermplasmList(null, "Test List #2", new Long(20120305), "LST", new Integer(1),
+                "Test List #2 for GCP-92", null, 1);
+        germplasmLists.add(germplasmList);
 
-            System.out.println("Inserting new Germplasm List Test #3: Complete details with ID");
-            germplasmList = new GermplasmList(null, "Test List #3", new Long(20120305), "LST", new Integer(1), "Test List #3 for GCP-92",
-                    null, 1);
-            System.out.println(germplasmList);
-            germplasmLists.add(germplasmList);
+        germplasmList = new GermplasmList(null, "Test List #3", new Long(20120305), "LST", new Integer(1), "Test List #3 for GCP-92", null,
+                1);
+        germplasmLists.add(germplasmList);
 
-            System.out.println("Inserting new Germplasm List Test #4: Complete details with ID");
-            germplasmList = new GermplasmList(null, "Test List #4", new Long(20120305), "LST", new Integer(1), "Test List #4 for GCP-92",
-                    null, 1);
-            System.out.println(germplasmList);
-            germplasmLists.add(germplasmList);
+        germplasmList = new GermplasmList(null, "Test List #4", new Long(20120305), "LST", new Integer(1), "Test List #4 for GCP-92", null,
+                1);
+        germplasmLists.add(germplasmList);
 
-            System.out.println("addGermplasmList(List<GermplasmList>): " + manager.addGermplasmList(germplasmLists));
-        } catch (Exception e) {
-            e.printStackTrace();
+        List<Integer> ids = manager.addGermplasmList(germplasmLists);
+        System.out.println("testAddGermplasmLists() GermplasmLists added: " + ids.size());
+        System.out.println("testAddGermplasmLists() RESULTS: ");
+        for (Integer id : ids) {
+            GermplasmList listAdded = manager.getGermplasmListById(id);
+            System.out.println("  " + listAdded);
+            // delete record
+            if (!listAdded.getName().equals("Test List #4")) { // delete except for Test List #4 which is used in testUpdateGermplasmList
+                manager.deleteGermplasmList(listAdded);
+            }
         }
-        System.out.println("********** testAddGermplasmList(List<GermplasmList>) done **********");
     }
 
     @Test
     public void testUpdateGermplasmList() throws Exception {
-        System.out.println("********** testUpdateGermplasmList() **********");
-        try {
-            List<GermplasmList> germplasmLists = new ArrayList<GermplasmList>();
-            System.out.println("Updating Germplasm List Test #1");
-            GermplasmList germplasmList = manager.getGermplasmListById(-1);
-            germplasmList.setName("Test List #1, UPDATE");
-            germplasmList.setDescription("Test List #1 for GCP-92, UPDATE");
-            System.out.println(germplasmList);
-            germplasmLists.add(germplasmList);
+        List<GermplasmList> germplasmLists = new ArrayList<GermplasmList>();
+        List<String> germplasmListStrings = new ArrayList<String>();
 
-            System.out.println("Updating Germplasm List Test #4");
-            GermplasmList parent = manager.getGermplasmListById(-1);
-            germplasmList = manager.getGermplasmListById(-4);
-            germplasmList.setName("Test List #4, UPDATE");
-            germplasmList.setDescription("Test List #4 for GCP-92 UPDATE");
-            germplasmList.setParent(parent);
-            System.out.println(germplasmList);
-            germplasmLists.add(germplasmList);
+        GermplasmList germplasmList1 = manager.getGermplasmListByName("Test List #1", 0, 1, Operation.EQUAL, Database.LOCAL).get(0);
+        germplasmListStrings.add(germplasmList1.toString());
+        germplasmList1.setDescription("Test List #1 for GCP-92, UPDATE");
+        germplasmLists.add(germplasmList1);
 
-            System.out.println("updateGermplasmList(): " + manager.updateGermplasmList(germplasmLists));
-        } catch (Exception e) {
-            e.printStackTrace();
+        GermplasmList parent = manager.getGermplasmListById(-1);
+        GermplasmList germplasmList2 = manager.getGermplasmListByName("Test List #4", 0, 1, Operation.EQUAL, Database.LOCAL).get(0);
+        germplasmListStrings.add(germplasmList2.toString());
+        germplasmList2.setDescription("Test List #4 for GCP-92 UPDATE");
+        germplasmList2.setParent(parent);
+        germplasmLists.add(germplasmList2);
+
+        List<Integer> updatedIds = manager.updateGermplasmList(germplasmLists);
+
+        System.out.println("testUpdateGermplasmList() IDs updated: " + updatedIds);
+        System.out.println("testUpdateGermplasmList() RESULTS: ");
+        for (int i = 0; i < updatedIds.size(); i++) {
+            GermplasmList updatedGermplasmList = manager.getGermplasmListById(updatedIds.get(i));
+            System.out.println("  FROM " + germplasmListStrings.get(i));
+            System.out.println("  TO   " + updatedGermplasmList);
+            
+            // No need to clean up, will use the records in subsequent tests
         }
-        System.out.println("********** testUpdateGermplasmList() done **********");
+
     }
 
     @Test
     public void testAddGermplasmListData() throws Exception {
-        System.out.println("********** testAddGermplasmListData() **********");
-        try {
-            System.out.println("Inserting new Germplasm List Data Test #1: Complete details");
-            GermplasmList germList = manager.getGermplasmListById(-4);
-            GermplasmListData germplasmListData = new GermplasmListData(null, germList, new Integer(2), 1, null, null, "Germplasm Name 3",
-                    null, 0, 99992);
-            System.out.println(germplasmListData);
-            System.out.println("addGermplasmListData(): " + manager.addGermplasmListData(germplasmListData));
-        } catch (Exception e) {
-            e.printStackTrace();
+        GermplasmList germList = manager.getGermplasmListByName("Test List #1", 0, 1, Operation.EQUAL, Database.LOCAL).get(0);
+        GermplasmListData germplasmListData = new GermplasmListData(null, germList, new Integer(2), 1, "EntryCode", "SeedSource",
+                "Germplasm Name 3", "GroupName", 0, 99992);
+
+        System.out.println("testAddGermplasmListData() records added: " + manager.addGermplasmListData(germplasmListData));
+        System.out.println("testAddGermplasmListData() RESULTS: ");
+        if (germplasmListData.getId() != null) {
+            System.out.println("  " + germplasmListData);
         }
-        System.out.println("********** testAddGermplasmListData() done **********");
+
     }
 
     @Test
     public void testAddGermplasmListDatas() throws Exception {
-        System.out.println("********** testAddGermplasmListDatas() **********");
-        try {
-            List<GermplasmListData> germplasmListDatas = new ArrayList<GermplasmListData>();
-            System.out.println("Inserting new Germplasm List Data Test #2: Complete details");
-            GermplasmList germList = manager.getGermplasmListById(-4);
-            GermplasmListData germplasmListData = new GermplasmListData(null, germList, new Integer(2), 2, null, null, "Germplasm Name 4",
-                    null, 0, 99993);
-            System.out.println(germplasmListData);
-            germplasmListDatas.add(germplasmListData);
+        List<GermplasmListData> germplasmListDatas = new ArrayList<GermplasmListData>();
 
-            System.out.println("Inserting new Germplasm List Data Test #3: Complete details");
-            germList = manager.getGermplasmListById(-2);
-            germplasmListData = new GermplasmListData(null, germList, new Integer(1), 1, null, null, "Germplasm Name 1", null, 0, 99990);
-            System.out.println(germplasmListData);
-            germplasmListDatas.add(germplasmListData);
+        GermplasmList germList = manager.getGermplasmListByName("Test List #4", 0, 1, Operation.EQUAL, Database.LOCAL).get(0);
+        GermplasmListData germplasmListData = new GermplasmListData(null, germList, new Integer(2), 2, "EntryCode", "SeedSource",
+                "Germplasm Name 4", "GroupName", 0, 99993);
+        germplasmListDatas.add(germplasmListData);
 
-            System.out.println("Inserting new Germplasm List Data Test #4: Complete details");
-            germplasmListData = new GermplasmListData(null, germList, new Integer(1), 2, null, null, "Germplasm Name 2", null, 0, 99991);
-            System.out.println(germplasmListData);
-            germplasmListDatas.add(germplasmListData);
+        germList = manager.getGermplasmListByName("Test List #1", 0, 1, Operation.EQUAL, Database.LOCAL).get(0);
+        germplasmListData = new GermplasmListData(null, germList, new Integer(1), 2, "EntryCode", "SeedSource", "Germplasm Name 1",
+                "GroupName", 0, 99990);
+        germplasmListDatas.add(germplasmListData);
 
-            System.out.println("addGermplasmListDatas(): " + manager.addGermplasmListData(germplasmListDatas));
-        } catch (Exception e) {
-            e.printStackTrace();
+        germplasmListData = new GermplasmListData(null, germList, new Integer(1), 3, "EntryCode", "SeedSource", "Germplasm Name 2",
+                "GroupName", 0, 99991);
+        germplasmListDatas.add(germplasmListData);
+
+        System.out.println("testAddGermplasmListDatas() records added: " + manager.addGermplasmListData(germplasmListDatas));
+        System.out.println("testAddGermplasmListDatas() RESULTS: ");
+        for (GermplasmListData listData : germplasmListDatas) {
+            if (listData.getId() != null) {
+                System.out.println("  " + listData);
+            }
         }
-        System.out.println("********** testAddGermplasmListDatas() done **********");
-    }
-
-    @Test
-    public void testDeleteGermplasmList() throws Exception {
-        System.out.println("********** testDeleteGermplasmList() **********");
-        try {
-            List<GermplasmList> germplasmLists = new ArrayList<GermplasmList>();
-
-            System.out.println("Deleting Germplasm List #-2: ");
-            GermplasmList germplasmList = manager.getGermplasmListById(-2);
-            germplasmLists.add(germplasmList);
-            System.out.println("Germplasm List #-2: " + germplasmList);
-
-            System.out.println("Deleting Germplasm List #-3: ");
-            germplasmList = manager.getGermplasmListById(-3);
-            germplasmLists.add(germplasmList);
-            System.out.println("Germplasm List #-3: " + germplasmList);
-
-            System.out.println("deleteGermplasmList(): " + manager.deleteGermplasmList(germplasmLists));
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        System.out.println("********** testDeleteGermplasmList() done **********");
     }
 
     @Test
     public void testUpdateGermplasmListData() throws Exception {
-        System.out.println("********** testUpdateGermplasmListData() **********");
-        try {
-            List<GermplasmListData> germplasmListDatas = new ArrayList<GermplasmListData>();
+        List<GermplasmListData> germplasmListDatas = new ArrayList<GermplasmListData>();
+        
+        //GermplasmListData prior to update
+        List<String> germplasmListDataStrings = new ArrayList<String>();
+        
+        // Get germListId of GermplasmList with name Test List #1
+        Integer germListId = manager.getGermplasmListByName("Test List #1", 0, 1, Operation.EQUAL, Database.LOCAL).get(0).getId();
+        
+        GermplasmListData germplasmListData = manager.getGermplasmListDataByListId(germListId, 0, 5).get(0); 
+        germplasmListDataStrings.add(germplasmListData.toString());
+        germplasmListData.setDesignation("Germplasm Name 3, UPDATE");
+        germplasmListDatas.add(germplasmListData);
 
-            System.out.println("Updating Germplasm List #-4, 1: ");
-            GermplasmListData germplasmListData = manager.getGermplasmListDataByListIdAndEntryId(-4, 1);
-            germplasmListData.setDesignation("Germplasm Name 3, UPDATE");
-            germplasmListDatas.add(germplasmListData);
-            System.out.println("Germplasm List Data #-4, 1: " + germplasmListData);
+        germplasmListData  = manager.getGermplasmListDataByListId(germListId, 0, 5).get(1); 
+        germplasmListDataStrings.add(germplasmListData.toString());
+        germplasmListData.setDesignation("Germplasm Name 4, UPDATE");
+        germplasmListDatas.add(germplasmListData);
 
-            System.out.println("Updating Germplasm List #-4, 2: ");
-            germplasmListData = manager.getGermplasmListDataByListIdAndEntryId(-4, 2);
-            germplasmListData.setDesignation("Germplasm Name 4, UPDATE");
-            germplasmListDatas.add(germplasmListData);
-            System.out.println("Germplasm List Data #-4, 2: " + germplasmListData);
-
-            System.out.println("updateGermplasmListData(): " + manager.updateGermplasmListData(germplasmListDatas));
-        } catch (Exception e) {
-            e.printStackTrace();
+        System.out.println("testUpdateGermplasmListData() updated records: " + manager.updateGermplasmListData(germplasmListDatas));
+        System.out.println("testUpdateGermplasmListData() RESULTS: ");
+        for (int i=0; i< germplasmListDatas.size(); i++){
+            System.out.println("  FROM " + germplasmListDataStrings.get(i));
+            System.out.println("  TO   " + germplasmListDatas.get(i));   
         }
-        System.out.println("********** testUpdateGermplasmListData() done **********");
     }
 
     @Test
-    public void testDeleteGermplasmListData() throws Exception {
-        System.out.println("********** testDeleteGermplasmListData() **********");
-        try {
-            System.out.println("Retrieving Germplasm List #-4: ");
-            GermplasmList germplasmList = manager.getGermplasmListById(-4);
-
-            System.out.println("Deleting Germplasm List Data #-4, 1: ");
-            System.out.println("deleteGermplasmListData(): " + manager.deleteGermplasmListDataByListId((-4)));
-
-            System.out.println("Viewing Germplasm List #-4's List Data: ");
-            germplasmList = manager.getGermplasmListById(-4);
-            System.out.println(germplasmList.getListData());
-        } catch (Exception e) {
-            e.printStackTrace();
+    public void testDeleteGermplasmListData() throws Exception {        
+        List<GermplasmListData> listData = new ArrayList<GermplasmListData>();
+        
+        // Get GermplasmList with name Test List #4
+        GermplasmList germplasmList = manager.getGermplasmListByName("Test List #1", 0, 1, Operation.EQUAL, Database.LOCAL).get(0);
+        listData.addAll(manager.getGermplasmListDataByListId(germplasmList.getId(), 0, 10));
+        manager.deleteGermplasmListDataByListId(germplasmList.getId());
+        
+        // Get GermplasmList with name Test List #4
+        germplasmList = manager.getGermplasmListByName("Test List #4", 0, 1, Operation.EQUAL, Database.LOCAL).get(0);
+        listData.addAll(manager.getGermplasmListDataByListId(germplasmList.getId(), 0, 10));
+        manager.deleteGermplasmListDataByListId(germplasmList.getId());
+        
+        System.out.println("testDeleteGermplasmListData() records to delete: " + listData.size());        
+        System.out.println("testDeleteGermplasmListData() deleted records: " + listData);
+        for (GermplasmListData listItem : listData) {
+            System.out.println("  " + listItem);
         }
-        System.out.println("********** testDeleteGermplasmList() done **********");
+
     }
-    
+
+    @Test
+    public void testDeleteGermplasmList() throws Exception {
+        List<GermplasmList> germplasmLists = new ArrayList<GermplasmList>();
+
+        GermplasmList germplasmList = manager.getGermplasmListByName("Test List #1", 0, 1, Operation.EQUAL, Database.LOCAL).get(0);
+        germplasmLists.add(germplasmList);
+
+        germplasmList = manager.getGermplasmListByName("Test List #4", 0, 1, Operation.EQUAL, Database.LOCAL).get(0);
+        germplasmLists.add(germplasmList);
+
+        System.out.println("testDeleteGermplasmList() records to delete: " + manager.deleteGermplasmList(germplasmLists));
+        System.out.println("testDeleteGermplasmList() deleted records: ");
+        for (GermplasmList listItem : germplasmLists) {
+            System.out.println("  " + listItem);
+        }
+    }
+
     @Test
     public void testGetTopLevelLists() throws Exception {
-        System.out.println("********** testGetTopLevelLists() **********");
-        try {
-            System.out.println("Retrieving Top Level Lists: ");
-            List<GermplasmList> topLevelFolders = new ArrayList<GermplasmList>();
-            topLevelFolders = manager.getAllTopLevelLists(0, 100, Database.LOCAL);
-            System.out.println(topLevelFolders);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        System.out.println("********** testGetTopLevelLists() done **********");
+        List<GermplasmList> topLevelFolders = manager.getAllTopLevelLists(0, 100, Database.LOCAL);
+        System.out.println("testGetTopLevelLists(0, 100, Database.Local) RESULTS: " + topLevelFolders);
     }
-    
+
     @Test
     public void testCountTopLevelLists() throws Exception {
-        System.out.println("********** testCountTopLevelLists() **********");
-        try {
-            System.out.println("Counting Top Level Lists: ");
-            int count = manager.countAllTopLevelLists(Database.LOCAL);
-            System.out.println(count);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        System.out.println("********** testCountTopLevelLists() done **********");
+        long count = manager.countAllTopLevelLists(Database.LOCAL);
+        System.out.println("testCountTopLevelLists(Database.LOCAL) RESULTS: " + count);
     }
-    
-    
+
     @Test
     public void testGetGermplasmListChildren() throws Exception {
-        try {
-            List<GermplasmList> children = manager.getGermplasmListByParentFolderId(-1, 0, 10);
-            System.out.println("testGetGermplasmListChildren(): ");
-            for(GermplasmList child : children) {
-                System.out.println(child.getId() + ": " + child.getName());
-            }
-            
-        } catch (Exception e) {
-            e.printStackTrace();
+        Integer parentFolderId = Integer.valueOf(-1);
+        List<GermplasmList> children = manager.getGermplasmListByParentFolderId(parentFolderId, 0, 10);
+        System.out.println("testGetGermplasmListChildren(" + parentFolderId + ") RESULTS: ");
+        for (GermplasmList child : children) {
+            System.out.println("  " + child.getId() + ": " + child.getName());
         }
     }
-    
+
     @Test
-    public void testCountGermplasmListChildren() {
-        try {
-            Long result = manager.countGermplasmListByParentFolderId(-1);
-            System.out.println("testCountGermplasmListChildren(): " + result);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
+    public void testCountGermplasmListChildren() throws Exception {
+        Integer parentFolderId = Integer.valueOf(-1);
+        Long result = manager.countGermplasmListByParentFolderId(parentFolderId);
+        System.out.println("testCountGermplasmListChildren(" + parentFolderId + ") RESULTS: " + result);
     }
-    
+
     @AfterClass
     public static void tearDown() throws Exception {
         factory.close();
