@@ -12,16 +12,11 @@
 
 package org.generationcp.middleware.manager.test;
 
-import java.util.ArrayList;
 import java.util.List;
 
 import org.generationcp.middleware.manager.DatabaseConnectionParameters;
-import org.generationcp.middleware.manager.FindGermplasmByNameModes;
-import org.generationcp.middleware.manager.GermplasmNameType;
 import org.generationcp.middleware.manager.ManagerFactory;
-import org.generationcp.middleware.manager.Operation;
 import org.generationcp.middleware.manager.api.GermplasmDataManager;
-import org.generationcp.middleware.pojos.Attribute;
 import org.generationcp.middleware.pojos.Bibref;
 import org.generationcp.middleware.pojos.Country;
 import org.generationcp.middleware.pojos.Germplasm;
@@ -29,12 +24,8 @@ import org.generationcp.middleware.pojos.GermplasmPedigreeTree;
 import org.generationcp.middleware.pojos.GermplasmPedigreeTreeNode;
 import org.generationcp.middleware.pojos.Location;
 import org.generationcp.middleware.pojos.Method;
-import org.generationcp.middleware.pojos.Name;
 import org.generationcp.middleware.pojos.UserDefinedField;
-import org.junit.After;
 import org.junit.AfterClass;
-import org.junit.Assert;
-import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
@@ -53,8 +44,10 @@ public class TestGermplasmPedigreeQueries{
 
     @Test
     public void testGetMethodById() throws Exception {
-        Method method = manager.getMethodByID(new Integer(1));
+        Integer id = Integer.valueOf(1);
+        Method method = manager.getMethodByID(id);
         System.out.println(method);
+        System.out.println("testGetMethodById(" + id + ") RESULTS: " + method);
     }
 
     @Test
@@ -62,60 +55,73 @@ public class TestGermplasmPedigreeQueries{
         List<Method> methods = manager.getAllMethods();
 
         List<Method> sublist = methods.subList(0, 4);
+        System.out.println("testGetAllMethods() RESULTS: " + sublist);
         for (Method method : sublist) {
-            System.out.println(method);
+            System.out.println("  " + method);
         }
     }
 
     @Test
     public void testGetUserDefinedFieldById() throws Exception {
-        UserDefinedField udfld = manager.getUserDefinedFieldByID(new Integer(1));
-        System.out.println(udfld);
+        Integer id = Integer.valueOf(1);
+        UserDefinedField udfld = manager.getUserDefinedFieldByID(id);
+        System.out.println("testGetUserDefinedFieldById(" + id + ") RESULTS: " + udfld);
     }
 
     @Test
     public void testGetCountryById() throws Exception {
-        Country country = manager.getCountryById(229);
-        System.out.println(country);
+        Integer id = Integer.valueOf(229);
+        Country country = manager.getCountryById(id);
+        System.out.println("testGetCountryById(" + id + ") RESULTS: " + country);
     }
 
     @Test
     public void testGetLocationById() throws Exception {
-        Location location = manager.getLocationByID(new Integer(1));
-        System.out.println(location);
+        Integer id = Integer.valueOf(1);
+        Location location = manager.getLocationByID(id);
+        System.out.println("testGetLocationById(" + id + ") RESULTS: " + location);
     }
 
     @Test
     public void testGetBibliographicalReferenceById() throws Exception {
-        Bibref bibref = manager.getBibliographicReferenceByID(new Integer(1));
-        System.out.println(bibref);
+        Integer id = Integer.valueOf(1);
+        Bibref bibref = manager.getBibliographicReferenceByID(id);
+        System.out.println("testGetBibliographicalReferenceById(" + id + ") RESULTS: " + bibref);
     }
 
     @Test
     public void testGetGermplasmDescendants() throws Exception {
-        List<Object[]> germplsmList = manager.findDescendants(47888, 0, 20);
+        Integer gid = Integer.valueOf(47888);
+        List<Object[]> germplsmList = manager.getDescendants(gid, 0, 20);
 
+        System.out.println("testGetGermplasmDescendants(" + gid + ") RESULTS: ");
         for (Object[] object : germplsmList) {
-            System.out.println("progenitor number: " + object[0]);
-            System.out.println(object[1]);
+            System.out.println("  progenitor number: " + object[0]);
+            System.out.println("   " + object[1]);
         }
     }
 
     @Test
     public void testCountGermplasmDescendants() throws Exception {
-        Integer count = manager.countDescendants(47888);
-        System.out.println("COUNT " + count);
+        Integer gid = Integer.valueOf(47888);
+        long count = manager.countDescendants(gid);
+        System.out.println("testCountGermplasmDescendants(" + gid + ") RESULTS: " + count);
     }
 
     @Test
     public void testGetProgenitorByGID() throws Exception {
-        Germplasm germplasm = manager.getParentByGIDAndProgenitorNumber(779745, 10);
-        System.out.println(germplasm);
+        Integer gid = Integer.valueOf(779745);
+        Integer pNo = Integer.valueOf(10);
+        Germplasm germplasm = manager.getParentByGIDAndProgenitorNumber(gid, pNo);
+        System.out.println("testGetProgenitorByGID(" + gid + ", " + pNo + ") RESULTS: " + germplasm);
     }
 
     @Test
     public void testGeneratePedigreeTree() throws Exception {
-        GermplasmPedigreeTree tree = manager.generatePedigreeTree(new Integer(306436), 4);
+        Integer gid = Integer.valueOf(306436);
+        int level = 4;
+        System.out.println("testGeneratePedigreeTree(" + gid + "," + level + ") RESULTS: ");
+        GermplasmPedigreeTree tree = manager.generatePedigreeTree(gid, level);
         if (tree != null) {
             printNode(tree.getRoot(), 1);
         }
@@ -123,52 +129,59 @@ public class TestGermplasmPedigreeQueries{
 
     @Test
     public void testGetManagementNeighbors() throws Exception {
-        List<Germplasm> neighbors = manager.getManagementNeighbors(new Integer(625));
+        Integer gid = Integer.valueOf(625);
+        List<Germplasm> neighbors = manager.getManagementNeighbors(gid);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetManagementNeighbors(" + gid + ") RESULTS:");
         for (Germplasm g : neighbors) {
             String name = g.getPreferredName() != null ? g.getPreferredName().getNval() : null;
-            System.out.println(g.getGid() + " : " + name);
+            System.out.println("  " + g.getGid() + " : " + name);
         }
     }
 
     @Test
     public void testGetGroupRelatives() throws Exception {
-        List<Germplasm> neighbors = manager.getGroupRelatives(new Integer(1));
+        Integer gid = Integer.valueOf(1);
+        List<Germplasm> neighbors = manager.getGroupRelatives(gid);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetGroupRelatives(" + gid + ") RESULTS:");
         for (Germplasm g : neighbors) {
             String name = g.getPreferredName() != null ? g.getPreferredName().getNval() : null;
-            System.out.println(g.getGid() + " : " + name);
+            System.out.println("  " + g.getGid() + " : " + name);
         }
     }
 
     @Test
     public void testGetGenerationHistory() throws Exception {
-        List<Germplasm> results = manager.getGenerationHistory(new Integer(50533));
+        Integer gid = new Integer(50533);
+        List<Germplasm> results = manager.getGenerationHistory(gid);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetGenerationHistory(" + gid + ") RESULTS:");
         for (Germplasm g : results) {
             String name = g.getPreferredName() != null ? g.getPreferredName().getNval() : null;
-            System.out.println(g.getGid() + " : " + name);
+            System.out.println("  " + g.getGid() + " : " + name);
         }
     }
 
     @Test
     public void testGetDerivativeNeighborhood() throws Exception {
-        GermplasmPedigreeTree tree = manager.getDerivativeNeighborhood(new Integer(1), 3, 3);
+        Integer gid= new Integer(1);
+        int stepsBack=3;
+        int stepsForward=3;
+        GermplasmPedigreeTree tree = manager.getDerivativeNeighborhood(gid, stepsBack, stepsForward);
+        System.out.println("testGetDerivativeNeighborhood(" + gid+", " +stepsBack+", "+ stepsForward + ") RESULTS: ");
         if (tree != null) {
             printNode(tree.getRoot(), 1);
         }
     }
 
     /**
-     * @Test public void testFindGermplasmByExample() throws Exception {
+     * @Test public void testGetGermplasmByExample() throws Exception {
      *       Germplasm sample = new Germplasm(); Location location = new
      *       Location(); location.setLname("International");
      *       sample.setLocation(location);
      * 
-     *       List<Germplasm> results = manager.findGermplasmByExample(sample, 0,
+     *       List<Germplasm> results = manager.getGermplasmByExample(sample, 0,
      *       5); Assert.assertTrue(results != null);
      *       Assert.assertTrue(!results.isEmpty()); for(Germplasm result :
      *       results) { System.out.println(result); } }
@@ -178,12 +191,12 @@ public class TestGermplasmPedigreeQueries{
      *       sample.setLocation(location);
      * 
      *       System.out.println(manager.countGermplasmByExample(sample)); }
-     * @Test public void testFindGermplasmByExampleWithAttribute() throws
+     * @Test public void testGetGermplasmByExampleWithAttribute() throws
      *       Exception { Germplasm sample = new Germplasm(); Attribute attribute
      *       = new Attribute(1); attribute.setAval("FOR DISTRIBUTION");
      *       sample.getAttributes().add(attribute);
      * 
-     *       List<Germplasm> results = manager.findGermplasmByExample(sample, 0,
+     *       List<Germplasm> results = manager.getGermplasmByExample(sample, 0,
      *       5); Assert.assertTrue(results != null);
      *       Assert.assertTrue(!results.isEmpty()); for(Germplasm result :
      *       results) { System.out.println(result); } }
