@@ -14,19 +14,17 @@ package org.generationcp.middleware.manager.test;
 
 import java.util.List;
 
-import org.generationcp.middleware.exceptions.QueryException;
+import org.generationcp.middleware.exceptions.MiddlewareQueryException;
 import org.generationcp.middleware.manager.Database;
 import org.generationcp.middleware.manager.DatabaseConnectionParameters;
 import org.generationcp.middleware.manager.ManagerFactory;
 import org.generationcp.middleware.manager.api.TraitDataManager;
-import org.generationcp.middleware.pojos.Person;
 import org.generationcp.middleware.pojos.Scale;
 import org.generationcp.middleware.pojos.ScaleContinuous;
 import org.generationcp.middleware.pojos.ScaleDiscrete;
 import org.generationcp.middleware.pojos.Trait;
 import org.generationcp.middleware.pojos.TraitMethod;
 import org.junit.AfterClass;
-import org.junit.Assert;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
@@ -52,104 +50,111 @@ public class TestTraitDataManagerImpl{
     @Test
     public void testGetAllScales() throws Exception {
         List<Scale> scales = manager.getAllScales(0, 5, Database.CENTRAL);
-
-        System.out.println("RESULTS:");
+        System.out.println("testGetAllScales() RESULTS:");
         for (Scale scale : scales) {
-            System.out.println(scale);
+            System.out.println("  " + scale);
         }
     }
 
     @Test
     public void testCountAllScales() throws Exception {
-        System.out.println(manager.countAllScales());
+        System.out.println("testCountAllScales(): " + manager.countAllScales());
     }
 
     @Test
     public void testGetScaleDiscreteDescription() throws Exception {
-        String desc = manager.getScaleDiscreteDescription(new Integer(1), "1");
-        System.out.println(desc);
+        Integer scaleId = Integer.valueOf(1);
+        String value = "1";
+        String desc = manager.getScaleDiscreteDescription(scaleId, value);
+        System.out.println("testGetScaleDiscreteDescription(scaleId=" + scaleId + ", value=" + value + ") DESCRIPTION: " + desc);
     }
 
     @Test
     public void testGetDiscreteValuesOfScale() throws Exception {
-        List<ScaleDiscrete> results = manager.getDiscreteValuesOfScale(new Integer(1));
+        Integer scaleId = Integer.valueOf(1);
+        List<ScaleDiscrete> results = manager.getDiscreteValuesOfScale(scaleId);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetDiscreteValuesOfScale(scaleId=" + scaleId + ") RESULTS: ");
         for (ScaleDiscrete sd : results) {
-            System.out.println(sd);
+            System.out.println("  " + sd);
         }
     }
 
     @Test
     public void testGetRangeOfContinuousScale() throws Exception {
-        ScaleContinuous range = manager.getRangeOfContinuousScale(new Integer(68));
-        System.out.println(range);
+        Integer scaleId = Integer.valueOf(68);
+        ScaleContinuous range = manager.getRangeOfContinuousScale(scaleId);
+        System.out.println("testGetRangeOfContinuousScale(scaleId=" + scaleId + ") RANGE: " + range);
     }
 
     @Test
     public void testGetTraitById() throws Exception {
-        Trait trait = manager.getTraitById(new Integer(305));
-        System.out.println(trait);
+        Integer traitId = Integer.valueOf(305);
+        Trait trait = manager.getTraitById(traitId);
+        System.out.println("testGetTraitById(traitId=" + traitId + ") TRAIT: " + trait);
     }
 
     @Test
     public void testGetAllTraits() throws Exception {
         List<Trait> traits = manager.getAllTraits(0, 5, Database.CENTRAL);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetAllTraits() RESULTS: ");
         for (Trait trait : traits) {
-            System.out.println(trait);
+            System.out.println("  " + trait);
         }
     }
 
     @Test
     public void testCountAllTraits() throws Exception {
-        System.out.println(manager.countAllTraits());
+        System.out.println("testCountAllTraits(): " + manager.countAllTraits());
     }
 
     @Test
     public void testGetTraitMethodById() throws Exception {
-        TraitMethod method = manager.getTraitMethodById(new Integer(1));
-        System.out.println(method);
+        Integer id = Integer.valueOf(1);
+        TraitMethod method = manager.getTraitMethodById(id);
+        System.out.println("testGetTraitMethodById(id=" + id + ")" + method);
     }
 
     @Test
     public void testGetAllTraitMethods() throws Exception {
         List<TraitMethod> traits = manager.getAllTraitMethods(0, 5, Database.CENTRAL);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetAllTraitMethods() RESULTS: ");
         for (TraitMethod trait : traits) {
-            System.out.println(trait);
+            System.out.println("  " + trait);
         }
     }
 
     @Test
     public void testCountAllTraitMethods() throws Exception {
-        System.out.println(manager.countAllTraitMethods());
+        System.out.println("testCountAllTraitMethods(): " + manager.countAllTraitMethods());
     }
 
     @Test
     public void testGetTraitMethodsByTraitId() throws Exception {
-        List<TraitMethod> traits = manager.getTraitMethodsByTraitId(new Integer(1215));
+        Integer traitId = Integer.valueOf(1215);
+        List<TraitMethod> traits = manager.getTraitMethodsByTraitId(traitId);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetTraitMethodsByTraitId(" + traitId + ") RESULTS: ");
         for (TraitMethod trait : traits) {
-            System.out.println(trait);
+            System.out.println("  " + trait);
         }
     }
 
     @Test
     public void testGetScalesByTraitId() throws Exception {
-        List<Scale> scales = manager.getScalesByTraitId(new Integer(1215));
+        Integer traitId = Integer.valueOf(1215);
+        List<Scale> scales = manager.getScalesByTraitId(traitId);
 
-        System.out.println("RESULTS:");
+        System.out.println("testGetScalesByTraitId(" + traitId + ") RESULTS: ");
         for (Scale scale : scales) {
             System.out.println(scale);
         }
     }
 
     @Test
-    public void testAddTraitMethod() throws QueryException {
+    public void testAddTraitMethod() throws MiddlewareQueryException {
         TraitMethod traitMethod = new TraitMethod();
         traitMethod.setId(-1);
         traitMethod.setAbbreviation("abrev");
@@ -157,16 +162,17 @@ public class TestTraitDataManagerImpl{
         traitMethod.setName("Hoarding Method");
         traitMethod.setTraitId(-1);
 
-        
         // add the person
         manager.addTraitMethod(traitMethod);
-        
+
         traitMethod = manager.getTraitMethodById(-1);
-        
-        // delete the person
-        //manager.deleteTraitMethod(traitMethod);
-    }    
-    
+
+        System.out.println("testAddTraitMethod() ADDED: " + traitMethod);
+
+        // cleanup: delete the trait method
+        manager.deleteTraitMethod(traitMethod);
+    }
+
     @AfterClass
     public static void tearDown() throws Exception {
         factory.close();
